force-app/main/default/objects/Volunteer_Recognition__c/Volunteer_Recognition__c.object-meta.xml
<CustomObject>
    <description>Volunteer Awards</description>
    <label>Volunteer Recognition</label>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Volunteer Recognition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Recognition</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>