force-app/main/default/objects/Volunteer_Recognition__c/fields/Award__c.field-meta.xml
<CustomField>
    <fullName>Award__c</fullName>
    <label>Award</label>
    <length>100</length>
    <type>Text</type>
</CustomField>