force-app/main/default/objects/Volunteer_Recognition__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date Presented</label>
    <type>Date</type>
</CustomField>