force-app/main/default/objects/Volunteer_Recognition__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>ExternalID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>