force-app/main/default/objects/Volunteer_Recognition__c/fields/Ordered__c.field-meta.xml
<CustomField>
    <fullName>Ordered__c</fullName>
    <description>Volunteer Award Ordered</description>
    <label>Date Ordered</label>
    <type>Date</type>
</CustomField>