force-app/main/default/objects/Volunteer_Recognition__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Recognition</relationshipLabel>
    <relationshipName>Volunteer_Recognition</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>